--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body >
+    <div>
+        <table id="hr24"></table>
+    </div>
     <div class="table">
     <table id="table"></table>
     <table id="table1"></table>
-    </div>
-    
+    </div>    
 
     <script src="./jquery.min.js"></script>
-    <!-- <script src="./1.js"></script> -->
-    <script src="./15minpercent.js"></script>
-    <script src="./prices24hr.js"></script>
+    <script src="./1.js"></script>
+    <!-- <script src="./15minpercent.js"></script> -->
+    <!-- <script src="./prices24hr.js"></script> -->
 </body>
 
 </html>
