--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body >
-    <div>
+<body>
+    <header>
+        <div class="header">
+            <span>B</span><span>I</span><span>N</span><span>A</span><span>N</span><span>C</span><span>E</span>
+        </div>
+    </header>
+    <main>
+        <!-- <div>
         <table id="hr24"></table>
-    </div>
-    <div class="table">
-    <table id="table"></table>
-    <table id="table1"></table>
-    </div>    
+    </div> -->
+        <div class="table">
+            <table id="table"></table>
+            <table id="table1"></table>
+        </div>
+    </main>
 
     <script src="./jquery.min.js"></script>
     <script src="./1.js"></script>
