--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <table id="hr24"></table>
     </div> -->
         <div class="table">
-            <table id="table"></table>
-            <table id="table1"></table>
+            <div id="table24"></div>
+            <div id="table15"></div>
         </div>
     </main>
 
     <script src="./jquery.min.js"></script>
     <script src="./1.js"></script>
-    <!-- <script src="./15minpercent.js"></script> -->
+    <script src="./15minpercent.js"></script>
     <!-- <script src="./prices24hr.js"></script> -->
 </body>
 
