--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
             <div id="table15"></div>
         </div>
     </main>
+    <footer>
+        <a href="https://t.me/Gena_xyligan" class="time"></a>
+    </footer>
 
     <script src="./jquery.min.js"></script>
+    <script src="./main.js"></script>
     <script src="./1.js"></script>
     <script src="./15minpercent.js"></script>
     <!-- <script src="./prices24hr.js"></script> -->
