--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Binance</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -15,9 +15,6 @@
         </div>
     </header>
     <main>
-        <!-- <div>
-        <table id="hr24"></table>
-    </div> -->
         <div class="table">
             <div id="table24"></div>
             <div id="table15">
@@ -31,7 +28,7 @@
 
     <script src="./jquery.min.js"></script>
     <script src="./main.js"></script>
-    <script src="./1.js"></script>
+    <script src="./24.js"></script>
     <script src="./15minpercent.js"></script>
     <!-- <script src="./prices24hr.js"></script> -->
 </body>
