--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Binance</title>
+    <title>My cripto ¯\_(ツ)_/¯</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    
+    <!-- HEADER -->
     <header>
         <div class="header">
-            <span>B</span><span>I</span><span>N</span><span>A</span><span>N</span><span>C</span><span>E</span>
+            <span>M</span><span>Y</span><span> </span><span>C</span><span>R</span><span>I</span><span>P</span><span>T</span><span>O</span>
         </div>
     </header>
+
+    <!-- MAIN -->
     <main>
         <div class="table">
             <div id="table24"></div>
@@ -22,15 +26,19 @@
             </div>
         </div>
     </main>
+
+    <!-- FOOTER -->
     <footer>
-        <a href="https://t.me/Gena_xyligan" class="time"></a>
+        <div class="foot">
+            <div class="time"></div>
+            <a href="https://t.me/Gena_xyligan" class="contact">bY xyligan</a>
+        </div>
     </footer>
 
     <script src="./jquery.min.js"></script>
     <script src="./main.js"></script>
     <script src="./24.js"></script>
     <script src="./15minpercent.js"></script>
-    <!-- <script src="./prices24hr.js"></script> -->
 </body>
 
 </html>
